Add Cognex DataMan SDK support and logging enhancements
Updated `Demo.App.Server.csproj` to include references to Cognex DataMan SDK libraries. Introduced `ScannerLogger` class in `ScannerLogger.cs` for logging scanner events, including message and traffic logging. Refactored `Worker.cs` to replace `SetLoggingEnabled` with `SetScannerLogging`, integrating the new logging functionality and adding state management for the scanner logger. Enhanced logging logic to provide warnings for uninitialized components.

--- a/COGNEX DataMan - React and ASP.NET Core/Demo.App/Demo.App.Server/Demo.App.Server.csproj
+++ b/COGNEX DataMan - React and ASP.NET Core/Demo.App/Demo.App.Server/Demo.App.Server.csproj
@@ -28,4 +28,19 @@
     </ProjectReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Cognex.DataMan.CogNamer.PC">
+      <HintPath>..\..\..\..\..\..\..\Cognex\DataMan SDK 5.6.3\Binaries\PC\Cognex.DataMan.CogNamer.PC.dll</HintPath>
+    </Reference>
+    <Reference Include="Cognex.DataMan.SDK.Discovery.PC">
+      <HintPath>..\..\..\..\..\..\..\Cognex\DataMan SDK 5.6.3\Binaries\PC\Cognex.DataMan.SDK.Discovery.PC.dll</HintPath>
+    </Reference>
+    <Reference Include="Cognex.DataMan.SDK.PC">
+      <HintPath>..\..\..\..\..\..\..\Cognex\DataMan SDK 5.6.3\Binaries\PC\Cognex.DataMan.SDK.PC.dll</HintPath>
+    </Reference>
+    <Reference Include="Cognex.DataMan.SDK.Utils.PC">
+      <HintPath>..\..\..\..\..\..\..\Cognex\DataMan SDK 5.6.3\Binaries\PC\Cognex.DataMan.SDK.Utils.PC.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
