--- a/COGNEX DataMan - React and ASP.NET Core/Demo.App/demo.app.client/package.json
+++ b/COGNEX DataMan - React and ASP.NET Core/Demo.App/demo.app.client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
+    "@tanstack/react-query": "^5.66.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
