--- a/COGNEX DataMan - React and ASP.NET Core/Demo.App/Demo.App.Server/Demo.App.Server.csproj
+++ b/COGNEX DataMan - React and ASP.NET Core/Demo.App/Demo.App.Server/Demo.App.Server.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.13" />
+    <PackageReference Include="System.IO.Ports" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
